force-app/main/default/objects/KDCE_TnCVersion__c/KDCE_TnCVersion__c.object-meta.xml
<CustomObject>
    <description>[KDCE] Terms and Conditions Version</description>
    <label>Terms and Conditions Version</label>
    <nameField>
        <label>Terms and Conditions Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms and Conditions Version</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>