force-app/main/default/objects/KDCE_TnCVersion__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Terms and Conditions Active Date</description>
    <inlineHelpText>Terms and Conditions Active Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>