force-app/main/default/objects/KDCE_TnCVersion__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <description>Version Number</description>
    <inlineHelpText>Version Number</inlineHelpText>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>