force-app/main/default/objects/KDCE_TnCVersion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VersionNumber__c</columns>
    <columns>IsActive__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>